--- a/presentations/IE101-baocaomonhoc.tex
+++ b/presentations/IE101-baocaomonhoc.tex
@@ -1,8 +1,11 @@
-\documentclass[14pt, aspectratio=169]{beamer}
+\documentclass[14pt,aspectratio=169]{beamer}
+% Modern Unicode + Vietnamese support for slides
+\usepackage{fontspec}
+\usepackage{polyglossia}
+\setdefaultlanguage{vietnamese}
+\setotherlanguage{english}
+\setmainfont{TeX Gyre Termes}
 \usetheme{Madrid}
-%\usecolortheme{seahorse}
-\usepackage[utf8]{inputenc}
-\usepackage[english]{babel}
 \usepackage{amsmath}
 \usepackage{amsfonts}
 \usepackage{amssymb}
