No longer use the vector package.

--- a/thesis.tex
+++ b/thesis.tex
@@ -52,7 +52,7 @@
 % "Natbib" style for the references in the Bibliography
 \usepackage{verbatim}  % Needed for the "comment" environment to make
 % LaTeX comments
-\usepackage{vector}  % Allows "\bvec{}" and "\buvec{}" for
+%\usepackage{vector}  % Allows "\bvec{}" and "\buvec{}" for
 % "blackboard" style bold vectors in maths
 %\hypersetup{urlcolor=blue, colorlinks=true}  % Colours hyperlinks in blue, but
 %this can be distracting if there are many links.
