--- a/thesis.tex
+++ b/thesis.tex
@@ -5,17 +5,7 @@
 % Set up the document for LuaLaTeX with native Unicode support
 \documentclass[a4paper, oneside, 13pt]{thesis}
 % Modern packages - UTF-8 and Vietnamese are natively supported in LuaLaTeX
-\usepackage{blindtext}
-\usepackage[all]{hypcap}
-\usepackage{paralist}
-\usepackage{eqparbox}
-\usepackage{array}
-\usepackage{multirow}
-% `booktabs` is provided by the class; avoid duplicate loading here
-\usepackage{tabularx}
-\usepackage{float}
-\usepackage{calc}
-\usepackage{tocloft}
+% Common packages are provided by the `thesis` class; keep this file minimal.
 
 %\usemintedstyle{trac}
 \floatstyle{boxed}
