--- a/thesis-template.tex
+++ b/thesis-template.tex
@@ -7,6 +7,8 @@
 \authors{Họ Tên Sinh Viên}
 \projectname{Tiêu Đề Dự Án}
 \instructor{GVHD}
+\INSTRUCTOR{GVHD}
+\STUDENT{Sinh Viên}
 \student{Sinh viên}
 \class{LT.K2025}
 \date{Tháng 12, 2025}
